# gpt2cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake
configs/: small.toml  tiny.toml
docs/: architecture.md  deployment.md  inference.md  roadmap.md  tokenizer.md  training.md
examples/sample_prompts/: prompts.txt
examples/tiny_shakespeare/: sample.txt
include/gpt2cpp/: bpe_tokenizer.hpp  dataset.hpp
include/gpt2cpp/app/: chat_repl.hpp
include/gpt2cpp/cli/: command_dispatch.hpp
include/gpt2cpp/core/: config.hpp  device.hpp  error.hpp  files.hpp  logging.hpp
include/gpt2cpp/data/: dataset.hpp
include/gpt2cpp/inference/: generator.hpp
include/gpt2cpp/model/: gpt2_model.hpp
include/gpt2cpp/serving/: http_server.hpp
include/gpt2cpp/tokenizer/: bpe_tokenizer.hpp
include/gpt2cpp/training/: trainer.hpp
scripts/: build.sh  run_demo.sh  serve_local.sh  setup_macos.sh  train_tiny.sh
src/app/: chat_repl.cpp
src/cli/: command_dispatch.cpp
src/core/: config.cpp  device.cpp  files.cpp  logging.cpp
src/data/: dataset.cpp
src/inference/: generator.cpp
src/model/: gpt2_model.cpp
src/serving/: http_server.cpp
src/tokenizer/: bpe_tokenizer.cpp
src/training/: trainer.cpp
tests/data/: test_packed_dataset.cpp
tests/model/: test_model_shapes.cpp
tests/tokenizer/: test_bpe_roundtrip.cpp
tools/: chat_cli.cpp  eval_model.cpp  generate.cpp  gpt2cpp.cpp  prepare_data.cpp  serve_web.cpp  train_model.cpp  train_tokenizer.cpp
web/: app.js  index.html  styles.css
